--- a/hello.html
+++ b/hello.html
@@ -2,3 +2,55 @@
 <head> </head>
 
 <body></body>
+
+1.	Problem definition:
+The distillation tower (raffinate splitter section) in the isomerization unit was restarted during a maintenance operation that lasted for a month and the power was cut off. This restarting process was contrary to the BP restart instructions, so the operating employers continued pumping flammable hexane into the distillation tower. The hydrocarbon introduced lasted for almost three hours without any discharge from the tower. The Hexane accumulated inside the column and led to raise the level up to 17 feet inside the tower. Due to the lack of critical alarms and control tools, this problem was not noticed by the involved team. The hexane filled up in the tower, formed a sufficient hydrostatic pressure in the overhead piping, and added to the existing pressure of the tower. Consequently, the pressure at the bottom increased rapidly from 21psi to 64psi. For this reason, three pressure relief valves were opened and flammable hexane discharged to blow-down through a header collection tubes to blowdown drum (that was not attached to the flare) and stack attached to it. It is worth to know that the blowdown was not connected to the flare. Blow-down drum was fully filled and the excess hexane released to the ground through a stack connected to the top of the blow-down. Unfortunately, the flammable hexane were exploded probably due to the spark potential of a moving trailer near the discharged area.[1]
+
+2.	 Methodology/calculations of BLEVE:
+The BLEVE-Fireball model in ALOHA is a solid flame model based on studies of fireballs resulting from BLEVEs (boiling liquid expanding vapour explosions) involving flammable gases liquefied under pressure and stored at ambient temperatures [2]. Considered blow-down drum as vertical tank with 147 feet Length and 5.25 feet diameter, the vessel volume of 22,750 gallons. Vessel was filled with hexane and  
+SITE DATA:
+   Location: MIAMI, FLORIDA
+   Building Air Exchanges Per Hour: 0.43 (unsheltered single storied)
+   Time: June 17, 2022 10:02 hours EDT (user specified)
+ CHEMICAL DATA:
+   Chemical Name: N-HEXANE
+   CAS Number: 110-54-3                   Molecular Weight: 86.18 g/mol
+          AEGL-1 (60 min): N/A   AEGL-2 (60 min): 2900 ppm   AEGL-3 (60 min): 8600 ppm
+          IDLH: 1100 ppm     LEL: 12000 ppm      UEL: 72000 ppm
+          Ambient Boiling Point: 68.7° C
+          Vapor Pressure at Ambient Temperature: 0.23 atm
+          Ambient Saturation Concentration: 225,495 ppm or 22.5%
+ ATMOSPHERIC DATA: (MANUAL INPUT OF DATA) 
+   Wind: 4 miles/hour from SSW at 10 meters
+   Ground Roughness: open country         Cloud Cover: 5 tenths
+   Air Temperature: 82° F                 Stability Class: B
+   No Inversion Height                    Relative Humidity: 81%
+
+ SOURCE STRENGTH:
+    BLEVE of flammable liquid in vertical cylindrical tank 
+   Tank Diameter: 5.15 feet               Tank Length: 146 feet
+   Tank Volume: 22,750 gallons
+   Tank contains liquid                   
+   Internal Storage Temperature: 116° F
+   Chemical Mass in Tank: 60.4 tons       Tank is 100% full
+   Percentage of Tank Mass in Fireball: 100%
+   Fireball Diameter: 220 meters          Burn Duration: 14 seconds
+ THREAT ZONE: 
+   Threat Modeled: Thermal radiation from fireball
+   Red   : 465 meters --- (10.0 kW/(sq m) = potentially lethal within 60 sec)
+   Orange: 657 meters --- (5.0 kW/(sq m) = 2nd degree burns within 60 sec)
+   Yellow: 1.0 kilometers --- (2.0 kW/(sq m) = pain within 60 sec)
+
+
+
+3.	 Explain your result.
+
+
+4.	 Conclusions and recommendations
+
+
+5.	 References
+1.	BP Texas Refinery Incident Causes: A Literature Review SOHEIL ABBASI 1, PAYAM KHOURDUSTAN 1, RASOUL SAYYADI 1, and SAEID JALILPOUR 2, SEYED SHAMSEDDIN ALIZADEH, Iranian Occupational Health Association (IOHA) 2008-5435/14/63-1-8.
+2.	ALOHA® Example Scenarios September 2016
+
+6.	Appendix
